# aspect_rover

./: .gitignore  AGENTS.md  README.md  TESTING.md  test.sh  view_urdf.sh
.docker/: Dockerfile
.docs/: TESTING.md
.docs/bugs/: BUGS.md
.docs/features/open/: ROADMAP.md
.docs/research/: MIGRATION-VALIDATION.md
aspect_bringup/: setup.cfg  setup.py
features/t-102-scoop-urdf/.docs/features/open/: ROADMAP.md
features/t-102-scoop-urdf/src/aspect_description/urdf/: aspect_rover.urdf.xacro
src/aspect_bringup/: CMakeLists.txt  package.xml  setup.py
src/aspect_bringup/aspect_bringup/: __init__.py
src/aspect_bringup/launch/: launch_lunar_south_pole.py
src/aspect_control/: CMakeLists.txt  package.xml  setup.py
src/aspect_control/aspect_control/: teleop_node.py
src/aspect_control/launch/: teleop.launch.py
src/aspect_control/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/aspect_description/: CMakeLists.txt  package.xml
src/aspect_description/launch/: foxglove_urdf.launch.py  view_urdf.launch.py
src/aspect_description/test/: test_urdf_geometry.py
src/aspect_description/urdf/: aspect_rover.urdf.xacro
src/aspect_gazebo/: CMakeLists.txt  package.xml
src/aspect_gazebo/media/dem/: extracted_513x513.tif  lunar_dem_southpole_test.png.aux.xml  resampled_lunar_south_pole.dem
src/aspect_gazebo/worlds/: lunar_south_pole.world
src/aspect_msgs/: CMakeLists.txt  package.xml
src/aspect_navigation/: CMakeLists.txt  package.xml  setup.py
src/aspect_navigation/config/: nav2_params.yaml
src/aspect_navigation/launch/: nav2.launch.py  waypoint_nav.launch.py
src/aspect_navigation/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/aspect_rviz/: CMakeLists.txt  package.xml
src/aspect_scripts/: test_helpers.py
src/aspect_worlds/: CMakeLists.txt  package.xml
